--- a/src/app/søknader/korrigeringAvInntektsmelding/containers/LeggTilDelvisFravær/LeggTilDelvisFravær.css
+++ b/src/app/søknader/korrigeringAvInntektsmelding/containers/LeggTilDelvisFravær/LeggTilDelvisFravær.css
@@ -11,7 +11,6 @@
     }
 
     &__inputContainer {
-        background-color: #eaeaea;
         padding: 1rem 0 0;
     }
 
