--- a/src/app/søknader/korrigeringAvInntektsmelding/containers/VirksomhetPanel/virksomhetPanel.css
+++ b/src/app/søknader/korrigeringAvInntektsmelding/containers/VirksomhetPanel/virksomhetPanel.css
@@ -1,6 +1,6 @@
 .virksomhetPanel {
     position: relative;
-    padding: 1.875rem 1.875rem 1rem !important;
+    padding: 2.25rem 1.875rem 1rem !important;
 
     .skjemaelement {
         margin-bottom: 1.375rem;
